Enable tslint in project schematic

--- a/angular.json
+++ b/angular.json
@@ -98,6 +98,17 @@
           "options": {
             "browserTarget": "angular-tour-of-heroes:build"
           }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "./tsconfig.app.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
         }
       }
     }
