--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "@types/node": "~8.9.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3",
-    "codelyzer": "^6.0.0"
+    "codelyzer": "^6.0.0",
+    "typescript": "~3.5.3"
   }
 }
