Update GitHub Action CI template

--- a/.github/workflows/angular-tour-of-heroes-CI.yml
+++ b/.github/workflows/angular-tour-of-heroes-CI.yml
@@ -9,16 +9,21 @@ on:
 jobs:
   build:
     name: build
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Use Node.js ${{ env.NODE_VERSION }}
       env:
-        NODE_VERSION: '13.x'
+        NODE_VERSION: '12.x'
       uses: actions/setup-node@v1
       with:
         node-version: ${{ env.NODE_VERSION }}
     - run: npm ci
     - run: npm run build
     - run: npm run lint
+    - name: Publish build artifacts
+      uses: actions/upload-artifact@v2
+      with:
+        name: dist
+        path: dist
